; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_worker_transaction.c_SendCommandToWorkerAsUser.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_worker_transaction.c_SendCommandToWorkerAsUser.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SendCommandToWorkerAsUser(i8* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  store i32* null, i32** %9, align 8
  store i32 0, i32* %10, align 4
  %11 = call i32 (...) @BeginOrContinueCoordinatedTransaction()
  %12 = call i32 (...) @CoordinatedTransactionUse2PC()
  %13 = load i32, i32* %10, align 4
  %14 = load i8*, i8** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i8*, i8** %7, align 8
  %17 = call i32* @GetNodeUserDatabaseConnection(i32 %13, i8* %14, i32 %15, i8* %16, i32* null)
  store i32* %17, i32** %9, align 8
  %18 = load i32*, i32** %9, align 8
  %19 = call i32 @MarkRemoteTransactionCritical(i32* %18)
  %20 = load i32*, i32** %9, align 8
  %21 = call i32 @RemoteTransactionBeginIfNecessary(i32* %20)
  %22 = load i32*, i32** %9, align 8
  %23 = load i8*, i8** %8, align 8
  %24 = call i32 @ExecuteCriticalRemoteCommand(i32* %22, i8* %23)
  ret void
}

declare dso_local i32 @BeginOrContinueCoordinatedTransaction(...) #1

declare dso_local i32 @CoordinatedTransactionUse2PC(...) #1

declare dso_local i32* @GetNodeUserDatabaseConnection(i32, i8*, i32, i8*, i32*) #1

declare dso_local i32 @MarkRemoteTransactionCritical(i32*) #1

declare dso_local i32 @RemoteTransactionBeginIfNecessary(i32*) #1

declare dso_local i32 @ExecuteCriticalRemoteCommand(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
